--- a/styles.css
+++ b/styles.css
@@ -24,17 +24,7 @@ button {
     border: 4px silver solid;
     background-color: #96ecff;
     font-size: 20px;
+    margin: 8px;
     color: #000000a2;
-    -webkit-animation: glow 1s ease-in-out infinite alternate;
-    -moz-animation: glow 1s ease-in-out infinite alternate;
-    animation: glow 1s ease-in-out infinite alternate;
-  }
-  
-  @-webkit-keyframes glow {
-    from {
-      box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #008ee6, 0 0 40px #008ee6, 0 0 50px #008ee6, 0 0 60px #008ee6, 0 0 70px #008ee6;
-    }
-    to {
-      box-shadow: 0 0 20px #fff, 0 0 30px #4dffe7, 0 0 40px #4dffe7, 0 0 50px #4dffe7, 0 0 60px #4dffe7, 0 0 70px #4dffe7, 0 0 80px #4dffe7;
-    }
+    box-shadow: 0 0 30px #008ee6;
   }
