--- a/styles.css
+++ b/styles.css
@@ -11,20 +11,27 @@ body {
     display: flex;
     flex-wrap: wrap;
     width: 200px;
-    height: 200px;
+    height: 240px;
+    border: 2px solid silver;
 }
 
 button {
     height: 20px;
     width: 30px;
+    margin: 2px;
+}
+
+#row {
+  margin: 8px 20px 10px 26px;
 }
 
 #display {
     width: 180px;
+    height: 60px;
     border: 4px silver solid;
     background-color: #96ecff;
     font-size: 20px;
     margin: 8px;
     color: #000000a2;
-    box-shadow: 0 0 30px #008ee6;
+    box-shadow: 0 0 80px #80ceff;
   }
